Bug 403039 - The Interest pull down field missing when trying to enter income transaction in Investment ledger
Summary: The Interest pull down field missing when trying to enter income transaction ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 405917 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-09 13:48 UTC by Michael Carpino
Modified: 2019-03-27 06:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Carpino 2019-01-09 13:48:43 UTC
SUMMARY  I'm using the AppImage (v 08109ea-x86_64) and trying to enter a dividend reinvestment however the interest pull-down field is missing from the ledger fields.  


STEPS TO REPRODUCE
1. Go to an Investment account in KMM and try to enter any income type transaction.  The Interest field is missing.
2. I was trying to enter a reinvestment transaction and wasn't able to complete/enter the transaction



SOFTWARE/OS VERSIONS

Operating System: Manjaro Linux 
KDE Plasma Version: 5.14.4
Qt Version: 5.12.0
KDE Frameworks Version: 5.53.0
Kernel Version: 4.20.0-1-MANJARO
OS Type: 64-bit
Processors: 4 × AMD A8-6410 APU with AMD Radeon R5 Graphics
Memory: 3.3 GiB of RAM
Comment 1 Thomas Baumgart 2019-01-09 19:16:25 UTC
Git commit a606f027f9dade40b270636dc46cfc0d33340ed2 by Thomas Baumgart.
Committed on 09/01/2019 at 19:17.
Pushed by tbaumgart into branch '5.0'.

Fix investment transaction editor

The investment transaction editor did not handle all fields according to
the selected transaction type. This change fixes these issues.
FIXED-IN: 5.0.3

M  +9    -9    kmymoney/dialogs/investactivities.cpp
M  +0    -63   kmymoney/dialogs/investtransactioneditor.cpp
M  +0    -2    kmymoney/dialogs/investtransactioneditor.h

https://commits.kde.org/kmymoney/a606f027f9dade40b270636dc46cfc0d33340ed2
Comment 2 Thomas Baumgart 2019-03-27 06:35:05 UTC
*** Bug 405917 has been marked as a duplicate of this bug. ***