Fix investment transaction editor

The investment transaction editor did not handle all fields according to
the selected transaction type. This change fixes these issues.

BUG: 403039
FIXED-IN: 5.0.3